Hacking.
$ Conflicts:
$	src/main/java/org/springframework/hateoas/mediatype/hal/HalConfiguration.java
$	src/test/java/org/springframework/hateoas/mediatype/vnderror/VndErrorsMarshallingTest.java

$ Conflicts:
$	pom.xml
$	src/main/java/org/springframework/hateoas/mediatype/collectionjson/Jackson2CollectionJsonModule.java
$	src/main/java/org/springframework/hateoas/mediatype/hal/Jackson2HalModule.java
$	src/test/java/org/springframework/hateoas/mediatype/hal/Jackson2HalIntegrationTest.java